desktop/ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desktop.sysadm.org
spec:

  tls:
  - hosts:
    - desktop.sysadm.org
    secretName: wildcard.sysadm.org

  rules:
  - host: desktop.sysadm.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: desktop
            port:
              number: 3000

---
